--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
     <script src="https://cdn.jsdelivr.net/gh/blasten/turn.js/turn.min.js"></script>
 
     <style>
-        body { text-align: center; background-color: #f5f5f5; margin: 0; padding: 0; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body { 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #ffffff;
+        }
         #flipbook {
-            margin: 50px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
         }
         .page {
@@ -22,16 +36,16 @@
             align-items: center;
             justify-content: center;
             overflow: hidden;
-            background-color: white;
         }
         .page img {
             width: 100%;
             height: 100%;
-            object-fit: contain; /* Evita recortes y mantiene proporción */
+            object-fit: cover; /* Asegura que la imagen llene el espacio sin bordes */
         }
-        /* Botones */
         .controls {
             margin-top: 20px;
+            display: flex;
+            gap: 10px;
         }
         .btn {
             padding: 10px 20px;
@@ -40,7 +54,6 @@
             color: white;
             border: none;
             cursor: pointer;
-            margin: 5px;
             border-radius: 5px;
         }
         .btn:hover {
@@ -67,7 +80,6 @@
 
             let flipbook = document.getElementById("flipbook");
 
-            // Crear páginas dinámicamente
             imagenes.forEach(src => {
                 let page = document.createElement("div");
                 page.classList.add("page");
@@ -77,14 +89,13 @@
                 flipbook.appendChild(page);
             });
 
-            // Ajustar tamaño del flipbook al tamaño de la primera imagen
             let primeraImagen = new Image();
             primeraImagen.src = imagenes[0];
             primeraImagen.onload = function() {
                 let width = primeraImagen.width;
                 let height = primeraImagen.height;
 
-                flipbook.style.width = width * 2 + "px"; // Doble ancho para el efecto libro
+                flipbook.style.width = width * 2 + "px";
                 flipbook.style.height = height + "px";
 
                 document.querySelectorAll(".page").forEach(page => {
@@ -92,7 +103,6 @@
                     page.style.height = height + "px";
                 });
 
-                // Inicializar turn.js después de ajustar el tamaño
                 setTimeout(function() {
                     $("#flipbook").turn({
                         width: width * 2,
@@ -106,7 +116,6 @@
                 }, 500);
             };
 
-            // Botones de navegación
             document.getElementById("prevPage").addEventListener("click", function() {
                 $("#flipbook").turn("previous");
             });
