--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipbook Animado</title>
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -12,44 +15,49 @@
     <script src="https://cdn.jsdelivr.net/gh/blasten/turn.js/turn.min.js"></script>
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body { 
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+        body {
             background-color: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            max-width: 800px; /* No se sale de col-12 */
+        }
+        #flipbook-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         #flipbook {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            width: 600px;
+            height: 400px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
         }
         .page {
+            width: 300px;
+            height: 400px;
+            background: white;
             display: flex;
             align-items: center;
             justify-content: center;
             overflow: hidden;
         }
         .page img {
-            width: 50%;
-            height: 50%;
-            object-fit: cover; /* Asegura que la imagen llene el espacio sin bordes */
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
         .controls {
-            margin-top: 20px;
+            margin-top: 10px;
             display: flex;
+            justify-content: center;
             gap: 10px;
         }
         .btn {
-            padding: 10px 20px;
-            font-size: 18px;
+            padding: 8px 16px;
+            font-size: 16px;
             background-color: #007bff;
             color: white;
             border: none;
@@ -63,12 +71,17 @@
 </head>
 <body>
 
-    <div id="flipbook"></div>
+    <div class="container text-center">
+  
+        
+        <div id="flipbook-container">
+            <div id="flipbook"></div>
+        </div>
 
-    <!-- Botones para avanzar y retroceder -->
-    <div class="controls">
-        <button class="btn" id="prevPage">◀ Anterior</button>
-        <button class="btn" id="nextPage">Siguiente ▶</button>
+        <div class="controls">
+            <button class="btn" id="prevPage">◀ Anterior</button>
+            <button class="btn" id="nextPage">Siguiente ▶</button>
+        </div>
     </div>
 
     <script>
@@ -89,32 +102,17 @@
                 flipbook.appendChild(page);
             });
 
-            let primeraImagen = new Image();
-            primeraImagen.src = imagenes[0];
-            primeraImagen.onload = function() {
-                let width = primeraImagen.width;
-                let height = primeraImagen.height;
-
-                flipbook.style.width = width * 2 + "px";
-                flipbook.style.height = height + "px";
-
-                document.querySelectorAll(".page").forEach(page => {
-                    page.style.width = width + "px";
-                    page.style.height = height + "px";
+            setTimeout(function() {
+                $("#flipbook").turn({
+                    width: 600,
+                    height: 400,
+                    autoCenter: true,
+                    display: 'double',
+                    acceleration: true,
+                    gradients: true,
+                    elevation: 50
                 });
-
-                setTimeout(function() {
-                    $("#flipbook").turn({
-                        width: width * 2,
-                        height: height,
-                        autoCenter: true,
-                        display: 'double',
-                        acceleration: true,
-                        gradients: true,
-                        elevation: 50
-                    });
-                }, 500);
-            };
+            }, 500);
 
             document.getElementById("prevPage").addEventListener("click", function() {
                 $("#flipbook").turn("previous");
